--- a/Puslapis/portfolio/index.html
+++ b/Puslapis/portfolio/index.html
@@ -2,38 +2,82 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Green Office</title>
+    <title>Green Office New</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+
+
 </head>
 <body>
-
-    <div class="container">
+<div class="container">
         <header>
-          <div class="header">
-            <div class="logo">
-              <img src="img/logo.png" alt="Green Office">
-            </div>
+        <div class="header">
+          <div class="logo">
+          <img src="img/logo.png" alt="Green Office Logo">
+          </div>
+          <nav>
+            <ul>
 
-            <nav class="menu">
-              <a href="#">Location</a>
-              <a href="#">About Us</a>
-              <a href="#">Contact</a>
-            </nav>
+            <li><a href="contacts.html">Contact</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Location</a></li>
+            </ul>
+          </nav>
           </div>
         </header>
 
-        <article class="art1">
+        <main>
+          <article class="left">
+            <h2 class="first">
+              Who we area
+            </h2>
+          <h3>
+          Lorem ipsum dolor sit amet
+        </h3>
 
-        </article>
+          <img src="img/who.jpg" alt="meeting">
+        <p class="l">
+          Da commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+        </p>
+        <p class="l">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+        <button> Read more</button>
+          </article>
 
-        <article class="art2">
-
-        </article>
-
-
-
-
-
+          <article class="right">
+            <h2 class="first">
+              What we do
+            </h2>
+          <h3>
+          Lorem ipsum dolor sit amet
+        </h3>
+            <img src="img/what.jpg" alt="Meeting2">
+            <p class="r null">
+              Da commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+            </p>
+            <p class="r">
+              Gehenderit in voluptate velit esse cillum
+            </p>
+            <p class="r">
+              Da commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+            </p>
+            <p class="r">
+              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+            </p>
+            <ul class="lst">
+              <li>Lorem ipsum ahajo</li>
+              <li>Consegdnajt kulfroem</li>
+              <li>Duis aute irure dolor in reprehende</li>
+              <li>voluptate velit esse cillum</li>
+              <li>Da commodo consequat</li>
+              <li>Gehenderit in voluptate vel</li>
+            </ul>
+            <button> Read more</button>
+          </article>
+      </main>
     </div>
+    <footer>
+  <p>Copyrigt (c) All rihts reserved</p>
+  </footer>
 </body>
 </html>
