--- a/Puslapis/portfolio/contacts.html
+++ b/Puslapis/portfolio/contacts.html
@@ -18,8 +18,8 @@
               <ul>
 
               <li><a href="contacts.html">Contact</a></li>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Location</a></li>
+              <li><a href="index.html">About Us</a></li>
+              <li><a href="contacts.html">Location</a></li>
               </ul>
             </nav>
             </div>
